# quner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README-publish.md
docs/design/: 2026-07-01-quner-design.md
docs/plans/: 2026-07-01-quner-v1.md
sandbox/: Dockerfile  make_fake_sys.sh  mock-nvidia-smi  run_sandbox.sh
src/quner/: __init__.py  __main__.py  calibration.py  cli.py  control.py  daemon.py  detect.py  memguard.py  prime.py  profiles.py  service.py  telemetry.py  tune.py
tests/: conftest.py  test_calibration.py  test_cli.py  test_control.py  test_daemon.py  test_detect.py  test_memguard.py  test_prime.py  test_profiles.py  test_scaffold.py  test_service.py  test_telemetry.py  test_tune.py
