[project]
name = "quner"
version = "0.1.0"
description = "Portable Linux efficiency daemon — tunes CPU governor / RAPL / GPU power-cap to the work-per-joule optimum."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Braden Lang", email = "braden.lang77@gmail.com" }]
keywords = ["power-management", "cpufreq", "rapl", "nvidia", "efficiency", "systemd", "laptop"]
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: System :: Power (UPS)",
]
dependencies = []

[project.optional-dependencies]
nvml = ["nvidia-ml-py"]
dev = ["pytest>=7"]

[project.scripts]
quner = "quner.cli:main"

[project.urls]
Homepage = "https://github.com/GaryOcean428/quner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
